--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -24,20 +24,28 @@
         color: #9b761d
     }
 
-    #top div a{
+    #top div a {
         font-family: "Microsoft YaHei";
-        text-decoration: none;font-size:12px;color: #000;
+        text-decoration: none;
+        font-size: 12px;
+        color: #000;
     }
 
-    #bottom{
+    #bottom {
         font-size: 12px;
         font-family: "Microsoft YaHei";
     }
 </style>
 <script>
     $(function () {
+        var width = $(document).width();
+        if (width > 1800) {
+           $('#city_img div').height('500px');
+            $('#city_img div img').height('500px');
+            //$('#city_imgs').css('display','block');
+        }
         var aQuery = window.location.href;  //取得Get参数
-        if(aQuery.indexOf("status")>0){
+        if (aQuery.indexOf("status") > 0) {
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
@@ -49,48 +57,49 @@
             "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>TEAM</a></li>" +
             "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>ABOUT US</a></li></ul>");
             $.ajax({
-                "url":'/home/index/home',
-                "dataType":'json',
-                "data":{
-                    "status":1
+                "url": '/home/index/home',
+                "dataType": 'json',
+                "data": {
+                    "status": 1
                 },
-                success:function(r){
-                    var content='<pre>'+r.msg.content+'</pre>';
-                    var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>"+r.msg.title+"</pre>";
+                success: function (r) {
+                    var content = '<pre>' + r.msg.content + '</pre>';
+                    var title = "<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>" + r.msg.title + "</pre>";
                     $('#title').html(title);
                     $('#content').html(content);
                     //$('#foot').text(r.msg.note);
                 }
             });
-        }else{
+        } else {
             $.ajax({
-                "url":'/home/index/home',
-                "dataType":'json',
-                success:function(r){
-                    var content="<pre style='margin-top:50px;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei'''>"+r.msg.content+"</pre>";
-                    var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>"+r.msg.title+"</pre>";
+                "url": '/home/index/home',
+                "dataType": 'json',
+                success: function (r) {
+                    var content = "<pre style='margin-top:50px;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei'''>" + r.msg.content + "</pre>";
+                    var title = "<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>" + r.msg.title + "</pre>";
                     $('#title').html(title);
                     $('#content').html(content);
                     //$('#foot').text(r.msg.note);
                 }
             });
         }
-        if(aQuery.indexOf("index")>0){
-            $("#index").css('color','#9b761d');
+        if (aQuery.indexOf("index") > 0) {
+            $("#index").css('color', '#9b761d');
         }
     });
-    function home(){
+    function home() {
         var aQuery = window.location.href;  //取得Get参数
-        if(aQuery.indexOf("status")>0){
-            window.location.href='index.html?status=1';
-        }else{
-            window.location.href='index.html';
+        if (aQuery.indexOf("status") > 0) {
+            window.location.href = 'index.html?status=1';
+        } else {
+            window.location.href = 'index.html';
         }
     }
 </script>
 <style>
     .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9 {
-        float: left; position: relative;
+        float: left;
+        position: relative;
     }
 
     .col-lg-12 {
@@ -188,13 +197,23 @@
     .col-lg-offset-1 {
         margin-left: 8.33333333%
     }
-    ul li a{
+
+    ul li a {
         color: #4c4c4c;
     }
-    #log:hover{
+
+    #log:hover {
         cursor: pointer;
     }
-    pre{background-color: #ffffff;border: 0;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif}
+
+    pre {
+        background-color: #ffffff;
+        border: 0;
+        font-size: 16px;
+        text-align: center;
+        font-family: 'Microsoft YaHei', sans-serif
+    }
+
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
@@ -203,7 +222,8 @@
             <img id="log" onclick="home()" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-8" id="top">
-            <div style="text-align: right"><a href="index.html" style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a href="index.html?status=1">English</a>
+            <div style="text-align: right"><a href="index.html" style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a
+                    href="index.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -223,15 +243,18 @@
         <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
     <!-- 轮播（Carousel）项目 -->
-    <div class="carousel-inner">
+    <div class="carousel-inner" id="city_img">
         <div class="item active" style="height: 400px; overflow: hidden;">
-            <img src="/Public/home/images/city3.jpg" style=" width:100%;height: 400px;margin-top: -25px;" alt="First slide">
+            <img src="/Public/home/images/city3.jpg" style=" width:100%;height: 400px;margin-top: -25px;"
+                 alt="First slide">
         </div>
         <div class="item" style="height: 400px; overflow: hidden;">
-            <img src="/Public/home/images/city1.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Second slide">
+            <img src="/Public/home/images/city1.jpg" style="width:100%;height: 400px;margin-top: -25px;"
+                 alt="Second slide">
         </div>
         <div class="item" style="height: 400px; overflow: hidden;">
-            <img src="/Public/home/images/city2.jpg" style="width:100%;height: 400px;margin-top: -25px;" alt="Third slide">
+            <img src="/Public/home/images/city2.jpg" style="width:100%;height: 400px;margin-top: -25px;"
+                 alt="Third slide">
         </div>
     </div>
 </div>
@@ -256,7 +279,8 @@
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
-            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+            <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
