--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -39,6 +39,11 @@
 </style>
 <script>
     $(function () {
+        var width = $(document).width();
+        if (width > 1800) {
+            $('#about_img div').height('350px');
+            $('#about_img div img').height('350px');
+        }
         var aQuery = window.location.href;  //取得Get参数
         if (aQuery.indexOf("abort") > 0) {
             $("#abort").css('color', '#9b761d');
@@ -345,7 +350,7 @@
         </div>
     </div>
 </div>
-<div style="margin-top: 10px;width: 100%;padding: 0">
+<div style="margin-top: 10px;width: 100%;padding: 0" id="about_img">
     <div style="width: 100%; height: 250px; overflow: hidden; padding: 0">
         <img style="width: 100%;height: 250px;" src="/Public/home/images/about1.jpg">
     </div>
