--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -72,6 +72,11 @@
 </style>
 <script>
     $(function() {
+        var width = $(document).width();
+        if (width > 1800) {
+            $('#case_img div').height('350px');
+            $('#case_img div img').height('350px');
+        }
         var aQuery = window.location.href; //取得Get参数
         if (aQuery.indexOf("case") > 0) {
             $("#case").css('color', '#9b761d');
@@ -582,7 +587,7 @@
             </div>
         </div>
     </div>
-    <div style="margin-top: 10px;width: 100%;padding: 0">
+    <div style="margin-top: 10px;width: 100%;padding: 0" id="case_img">
         <div style="width: 100%; height: 250px; overflow: hidden; padding: 0">
             <img style="width: 100%;height: 250px;" src="/Public/home/images/case1.jpg">
         </div>
