--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -49,6 +49,11 @@
         });
     }
     $(function () {
+        var width = $(document).width();
+        if (width > 1800) {
+            $('#contact_img div').height('350px');
+            $('#contact_img div img').height('350px');
+        }
         var aQuery = window.location.href;
         if (aQuery.indexOf("contact") > 0) {
             $("#contact").css('color', '#9b761d');
@@ -316,7 +321,7 @@
         </div>
     </div>
 </div>
-<div style="margin-top: 10px;width: 100%;padding: 0">
+<div style="margin-top: 10px;width: 100%;padding: 0" id="contact_img">
     <div style="width: 100%; height: 250px; overflow: hidden;padding: 0">
         <img style="width: 100%;height: 250px;" src="/Public/home/images/connect.jpg">
     </div>
