--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -59,6 +59,11 @@
 </style>
 <script>
     $(function () {
+        var width = $(document).width();
+        if (width > 1800) {
+            $('#news_img div').height('350px');
+            $('#news_img div img').height('350px');
+        }
         var aQuery = window.location.href;
         if (aQuery.indexOf("news") > 0) {
             $("#news").css('color', '#9b761d');
@@ -276,7 +281,7 @@
         </div>
     </div>
 </div>
-<div style="margin-top: 10px;width: 100%;padding: 0">
+<div style="margin-top: 10px;width: 100%;padding: 0" id="news_img">
     <div style="width: 100%;height: 250px; overflow: hidden; padding: 0">
         <img style="width: 100%;height: 250px;" src="/Public/home/images/news1.jpg">
     </div>
