--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -38,6 +38,11 @@
 </style>
 <script>
     $(function () {
+        var width = $(document).width();
+        if (width > 1800) {
+            $('#news_detail_img div').height('350px');
+            $('#news_detail_img div img').height('350px');
+        }
         $("#news").css('color', '#9b761d');
         var r = window.location.search;
         r = r.substring(r.indexOf("?") + 4, r.length);
@@ -272,7 +277,7 @@
         </div>
     </div>
 </div>
-<div style="margin-top: 10px;width: 100%;padding: 0">
+<div style="margin-top: 10px;width: 100%;padding: 0" id="news_detail_img">
     <div style="width: 100%;height: 250px; overflow: hidden; padding: 0">
         <img style="width: 100%;height: 250px;" src="/Public/home/images/news1.jpg">
     </div>
