--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -698,7 +698,7 @@
                 </div>
                 <div class=" col-lg-offset-6" style="position: relative;float: left;margin-top: 15px;width:30px !important;border: 2px #b0a065 solid;border-radius: 3px;"></div>
                 <div class="col-lg-6" style="text-align:center;margin-top: 50px">
-                    <img id="invest_img" style="margin: -10px auto; width: 75%;box-shadow: 0px 3px 6px #999;" />
+                    <img id="invest_img" style="margin: -10px auto; width: 290px;box-shadow: 0px 3px 6px #999;" />
                 </div>
                 <div class="col-lg-6" style="padding: 0;margin-top:10px;height:310px;overflow: auto;width: 47.4% !important;  ">
                     <div style="padding: 0;width: 100%" id="ch">
