--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -81,6 +81,10 @@
             $('#invest').width('900px');
             $('#invest').css('margin-left','3.33333333%');
         }
+        if (width > 1800) {
+            $('#invest').width('900px');
+            $('#invest').css('margin-left','6%');
+        }
         var aQuery = window.location.href; //取得Get参数
         if (aQuery.indexOf("case") > 0) {
             $("#case").css('color', '#9b761d');
