--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -162,6 +162,10 @@
             $('#detail').width('900px');
             $('#detail').css('margin-left','3.33333333%');
         }
+        if (width > 1800) {
+            $('#detail').width('900px');
+            $('#detail').css('margin-left','6%');
+        }
         var aQuery = window.location.href;
         if (aQuery.indexOf("team") > 0) {
             $("#team").css('color', '#9b761d');
