--- a/Public/admin/invest.html
+++ b/Public/admin/invest.html
@@ -486,10 +486,10 @@
                                     <th class="visible-lg" style="width: 6%">编号</th>
                                     <!--<th class="visible-lg" style="width: 8%">管理员</th>-->
                                     <th class="visible-lg" style="width: 15%">公司</th>
-                                    <th class="visible-lg" style="width: 11%">股票代码</th>
+                                    <th class="visible-lg" style="width: 11%">展示</th>
                                     <th class="visible-lg" style="width: 11%">地域</th>
                                     <th class="visible-lg" style="width: 11%">投资阶段</th>
-                                    <th class="visible-lg" style="width: 21%">上市地点</th>
+                                    <th class="visible-lg" style="width: 21%">行业</th>
                                     <th class="visible-lg" style="width: 10%">退出</th>
 
                                     <!--<th class="visible-lg" style="width: 10%">地图</th>-->
