--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -36,6 +36,7 @@
                     $('#name').val(r.msg.name);
                     $('#position').val(r.msg.position);
                     $('#intro').val(r.msg.intro);
+                    $('#intro_en').val(r.msg.intro_en);
                     $('#english').val(r.msg.english);
                     $('#zn_en').val(r.msg.zn_en);
                     $('#show').val(r.msg.show);
@@ -47,6 +48,7 @@
             var img = $('#img').val();
             var name = $('#name').val();
             var intro = $('#intro').val();
+            var intro_en = $('#intro_en').val();
             var english = $('#english').val();
             var position = $('#position').val();
             var show = $('#show').val();
@@ -62,6 +64,7 @@
                     "position": position,
                     "english": english,
                     "intro": intro,
+                    "intro_en":intro_en,
                     "show":show,
                     "zn_en":zn_en
                 },
@@ -81,6 +84,7 @@
             var img = $('#img').val();
             var name = $('#name').val();
             var intro = $('#intro').val();
+            var intro_en = $('#intro_en').val();
             var english = $('#english').val();
             var position = $('#position').val();
             var show = $('#show').val();
@@ -98,6 +102,7 @@
                         "position": position,
                         "english": english,
                         "intro": intro,
+                        "intro_en":intro_en,
                         "show":show,
                         "zn_en":zn_en
                     },
@@ -290,6 +295,14 @@
 
                         <div class="col-sm-10">
                             <pre><textarea class="form-control" id="intro" name="intro">
+                            </textarea></pre>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="position" class="col-sm-1 control-label">英文简介</label>
+
+                        <div class="col-sm-10">
+                            <pre><textarea class="form-control" id="intro_en" name="intro">
                             </textarea></pre>
                         </div>
                     </div>
